All unit tests work on node now

--- a/test/testSuite.html
+++ b/test/testSuite.html
@@ -27,7 +27,7 @@ limitations under the License.
   <body>
     <h1 id="nodeunit-header">iLib All Test Suites</h1>
     <script>
-     nodeunit.run(ilibNamefTest);
+     nodeunit.run(ilibNameTest);
     </script>
   </body>
 </html>
